--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/noczero/BelajarNodeJS#readme",
   "dependencies": {
-    "serialport": "^6.0.5"
+    "express": "^4.16.2",
+    "serialport": "^6.0.5",
+    "socket.io": "^2.0.4"
   }
 }
